--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./js/lesson1.js" type="module"></script> -->
     <!-- <script src="./js/lesson3.js" type="module"></script> -->
     <script src="./js/lesson4.js" type="module"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <ul class="stats"></ul>
+  </body>
 </html>
