--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
   </head>
   <body>
     <ul class="stats"></ul>
+    <div>
+      <p class="taskTitle">ЗАДАЧА 6</p>
+      <ul class="list">
+        <li class="listItem">1</li>
+        <li class="listItem">4</li>
+        <li class="listItem">8</li>
+        <li class="listItem">16</li>
+        <li class="listItem">20</li>
+        <li class="listItem">30</li>
+      </ul>
+      <button id="double">Подвоїти</button>
+    </div>
   </body>
 </html>
