--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
     <!-- <script src="./js/lesson1.js" type="module"></script> -->
     <!-- <script src="./js/lesson3.js" type="module"></script> -->
     <script src="./js/lesson4.js" type="module"></script>
   </head>
   <body>
-    <ul class="stats"></ul>
+    <!-- <ul class="stats"></ul>
     <div>
       <p class="taskTitle">ЗАДАЧА 6</p>
       <ul class="list">
@@ -21,6 +22,46 @@
         <li class="listItem">30</li>
       </ul>
       <button id="double">Подвоїти</button>
+    </div> -->
+
+    <!-- <table id="productTable">
+        <thead>
+          <tr>
+            <th>Назва</th>
+            <th>Ціна</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Яблука</td>
+            <td>20 грн</td>
+          </tr>
+          <tr>
+            <td>Банани</td>
+            <td>30 грн</td>
+          </tr>
+          <tr>
+            <td>Апельсини</td>
+            <td>25 грн</td>
+          </tr>
+        </tbody>
+      </table>
+      <div id="productDetails"></div> -->
+
+        
+    <div>
+      <p class="taskTitle">ЗАДАЧА 8</p>
+      <div class="statList">
+        <button class="calcButton" data-number="5">Button #1</button>
+        <button class="calcButton" data-number="2">Button #2</button>
+        <button class="calcButton" data-number="10">Button #3</button>
+        <button class="calcButton" data-number="50">Button #4</button>
+        <button class="calcButton" data-number="0">Button #5</button>
+        <button class="calcButton" data-number="20">Button #6</button>
+      </div>
+      <button id="resultButton">Вивести результат</button>
+      <div id="resultSection"></div>
     </div>
+
   </body>
 </html>
